# photo-organizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  photo_organizer.spec  pyproject.toml
docs/: HANDOFF.md  PACKAGING.md  SPEC.md  TODO.md
docs/superpowers/plans/: 2026-07-16-incremental-rescan.md
docs/superpowers/specs/: 2026-07-16-incremental-rescan-design.md
packaging/: pyinstaller_entry.py
scripts/: benchmark.py  make_sample_photos.py
src/photo_organizer/: cli.py
src/photo_organizer/classify/: analyze.py  bestshot.py  phash.py  quality.py  rules.py  similar.py
src/photo_organizer/core/: actions.py  config.py  database.py  hasher.py  image_loader.py  paths.py  platform_utils.py  scanner.py
src/photo_organizer/gui/: app.py  detail_panel.py  main_window.py  thumbnail_grid.py  workers.py
tests/: conftest.py  test_actions.py  test_analyze.py  test_bestshot.py  test_burst_grouping.py  test_cli_report_actions.py  test_cli_report_similar.py  test_cli_scan.py  test_config.py  test_database_missing.py  test_database_upsert.py  test_gui.py  test_hasher.py  test_image_loader.py  test_keyboard_culling.py  test_min_keep.py  test_nfc_normalization.py  test_paths.py  test_platform_utils.py  test_quality.py  test_rules.py  test_scanner.py  test_scanner_incremental.py  test_similar.py  test_worker_incremental.py
